dev: support DB_URL_SECRET in dev_db.sh; update example env

--- a/scripts/dev_db.env.example
+++ b/scripts/dev_db.env.example
@@ -12,4 +12,6 @@ DB_USER={{DB_USER}}
 DB_NAME={{DB_NAME}}
 # Name of Secret Manager secret that stores the DB password
 DB_PASSWORD_SECRET={{DB_PASSWORD_SECRET_NAME}}
+# Alternatively, provide the full DATABASE_URL via Secret Manager and we will rewrite host:port to localhost
+DB_URL_SECRET=DATABASE_URL
 
