chore(kiosk): set Cloud Run feed URL and bump kiosk-shell to 0.1.2; build workflow only on main

--- a/.github/workflows/kiosk-build.yml
+++ b/.github/workflows/kiosk-build.yml
@@ -3,6 +3,8 @@ name: Kiosk Windows build and publish artifacts
 on:
   workflow_dispatch:
   push:
+    branches:
+      - main
     paths:
       - 'kiosk-shell/**'
       - '.github/workflows/kiosk-build.yml'
