Add Foodics analysis and complete import scripts
- Add analyze_foodics_data.js to understand API structure and data relationships
- Add import_foodics_complete.js for comprehensive import of products, modifier groups, modifier options, and external mappings
- Scripts designed for Cloud Run jobs with proper error handling and batch processing
- Supports external_id tracking for Foodics integration
- Ready for deployment and cashier system integration

--- a/scripts/dev_db.env.example
+++ b/scripts/dev_db.env.example
@@ -1,17 +1,17 @@
 # Copy to scripts/dev_db.env and fill in your values
 # Project/instance
 PROJECT_ID=smart-order-469705
-REGION=europe-west1
+REGION=me-central1
 # Either set INSTANCE_NAME (below) OR set CONNECTION_NAME directly
-INSTANCE_NAME=smart-order-pg
-# CONNECTION_NAME=smart-order-469705:europe-west1:smart-order-pg
-PROXY_PORT=5432
+#INSTANCE_NAME=ordertech-db
+CONNECTION_NAME=smart-order-469705:me-central1:ordertech-db
+PROXY_PORT=6556
 
 # Database credentials
-DB_USER={{DB_USER}}
-DB_NAME={{DB_NAME}}
+DB_USER=ordertech
+DB_NAME=ordertech
 # Name of Secret Manager secret that stores the DB password
-DB_PASSWORD_SECRET={{DB_PASSWORD_SECRET_NAME}}
+DB_PASSWORD_SECRET=DB_PASSWORD
 # Alternatively, provide the full DATABASE_URL via Secret Manager and we will rewrite host:port to localhost
 DB_URL_SECRET=DATABASE_URL
 
